[package]
name = "mpa_project"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
rand_pcg = "0.3.1"
rand = "0.8.5"
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"

[dev-dependencies]
pyo3 = { version = "0.21.2", default-features = false, features = [] }

[lib]
doctest = true
name = "mpa_lib"
path = "src/lib.rs"


[[bin]]
name = "cli"
path = "src/bin/mpa_demo_cli.rs"
